src/objects/ErrorsCatalogue__mdt.object
<CustomObject>
    <description>This Custom Metadata Type is meant to store Application Wide Error Messages, Contact Info etc against a pre decided unique error code generated by the Error Type(Custom or Standard) so that the errors can be logged in with some relevant and consistent Info across the App and will facilitate Admin/Devs to get into an exception quickly just with a unique code showed to the end user along with the message designated in that particular case. Please note that this unique code will be generated at runtime when the exception is being handled and if it does not match against any of the pre decided error codes in the Error Catalogue, a common info would be displayed to the user along with the Exception Code. Exception Code is basically the unique Id of Error Log Object record.</description>
    <fields>
        <fullName>BusinessContact__c</fullName>
        <description>The first business point of Contact.</description>
        <inlineHelpText>Enter the the first business point of Contact for your error. Can be a combination of any of this in this format &lt;Name&gt;-&lt;Contact Number&gt;-&lt;Email&gt;. This field is optional.</inlineHelpText>
        <label>BusinessContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserMessageGenerator__c</fullName>
        <defaultValue>&apos;Shell_CommonErrMsgGenerator&apos;</defaultValue>
        <description>Name of the class that generates the End User Exception Message and implements the Shell_EndUserExcptnMsgGnrtnInterface.</description>
        <inlineHelpText>Provide the name of the class that generates the End User Exception Message and implements the Shell_EndUserExcptnMsgGnrtnInterface.</inlineHelpText>
        <label>EndUserMessageGenerator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndUserMessage__c</fullName>
        <description>This field is meant to store end user message.</description>
        <inlineHelpText>Please enter some user friendly one liner code like: &quot;A problem occurred. Please contact your CRC&quot;.
            Should not be more than 255 characters including the spaces.</inlineHelpText>
        <label>EndUserMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionCode__c</fullName>
        <description>The type of exception will act as exception code on Force.com platform.</description>
        <inlineHelpText>The type of exception will act as exception code on Force.com platform like DMLException, NullPointerException etc.</inlineHelpText>
        <label>ExceptionCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalArea__c</fullName>
        <label>FunctionalArea</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <defaultValue>&apos;en&apos;</defaultValue>
        <description>This field would be useful if the org needs internationalization in future. Currently not required. This would be the language Code like en for any kind of English.</description>
        <inlineHelpText>Enter the Language Code eg. &apos;en&apos; for now until internationalization is not there.</inlineHelpText>
        <label>Language</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>The severity of the Exception.</description>
        <inlineHelpText>How severe you think this Exception is, i.e. Low, Medium etc.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechnicalContact__c</fullName>
        <description>The first technical point of Contact Info, can be used for logging and displaying to the end user as well.</description>
        <inlineHelpText>Enter the first technical point of Contact Info for your error. Can be a combination of any of this in this format &lt;Name&gt;-&lt;Contact Number&gt;-&lt;Email&gt;. This field is again optional.</inlineHelpText>
        <label>TechnicalContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ErrorsCatalogue</label>
    <pluralLabel>ErrorsCatalogues</pluralLabel>
</CustomObject>